2014-02-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Geodetic.h:
	* UniversalTransverseMercator.h: 

2014-02-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-standard.cproj:
	* Geodetic.h:
	* Matrix4.h:
	* Matrix3.h:
	* Matrix2.h:
	* Vector3.h:
	* Vector4.h:
	* Vector2.h:
	* Geodetic.cpp:
	* Quaternion.h:
	* Spheroid3.h:
	* BasicConverter.h:
	* Spheroid3.cpp:
	* BasicConverter.cpp:
	* ReferenceEllipsoids.h:
	* UniversalTransverseMercator.h:
	* UniversalTransverseMercator.cpp: 

2014-02-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Box2.h: 

2014-02-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Types.h:
	* Box3.h:
	* Box2.h: 

2014-02-13  Holger Seelig  <holger.seelig@yahoo.de>

	* String.h:
	* Comment.h:
	* Sequence.h:
	* QuotedString.h: 

2014-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Triangle3.h: 

2014-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* URI.h:
	* String.h:
	* MemberValue.h:
	* Comment.h:
	* Sequence.h:
	* Character.h:
	* Rotation4.h:
	* QuotedString.h: 

2014-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* URI.h:
	* Popen2.h:
	* Now.h:
	* Image.h:
	* Popen2.cpp:
	* trim.cpp:
	* sprintf.h:
	* Functional.h:
	* Adapter.h:
	* BindStack.h:
	* ClockBase.h:
	* UniqueList.h:
	* sprintf.cpp:
	* SystemClock.h:
	* Box2.h:
	* Box3.h:
	* Color4.h:
	* MemberValue.h:
	* Line3.h:
	* Color3.h:
	* Vector4.h:
	* Vector3.h:
	* CountingClock.h:
	* Plane3.h:
	* Vector2.h:
	* Matrix4.h:
	* Matrix3.h:
	* Matrix2.h:
	* Sphere3.h:
	* Rotation4.h:
	* Cylinder3.h:
	* ReferenceIterator.h:
	* Quaternion.h:
	* CatmullRomSplineInterpolator.h: 

2014-02-10  Holger Seelig  <holger.seelig@yahoo.de>

	* URI.h:
	* Popen2.h:
	* Now.h:
	* Image.h:
	* Popen2.cpp:
	* trim.cpp:
	* sprintf.h:
	* Adapter.h:
	* BindStack.h:
	* sprintf.cpp:
	* ClockBase.h:
	* UniqueList.h:
	* SystemClock.h:
	* MemberValue.h:
	* CountingClock.h:
	* ReferenceIterator.h: 

2014-02-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Box3.h:
	* Box2.h: