@@ -3,6 +3,11 @@
 	* Geospatial.h:
 	* Geospatial.cpp: 
 
+2014-02-21  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Geospatial.h:
+	* Geospatial.cpp: 
+
 2014-02-20  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* GeoOrigin.h:
