@@ -1,5 +1,9 @@
 2014-02-21  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* UniversalTransverseMercator.h: 
+
+2014-02-21  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Geodetic.h:
 	* UniversalTransverseMercator.h: 
 
